{{$NEXT}}

1.1.1     2014-10-07 10:34:29+01:00 Europe/London
 - add DateTime::Format::ISO8601 prereq that was not auto-detected

1.1.0     2014-10-06 17:21:38+01:00 Europe/London
 - add support for retrieving Quantum View events (the 'manifest' part
   of the response is still not supported)

1.0.7     2014-09-17 11:42:50+01:00 Europe/London
 - fix parsing receipt image for ship_accept calls on return shipments
 - packages now have a 'description' field, which is required for
   return shipments
 - better error messages when constructing credit cards and services
   with just the code or just the label / type, and an invalid value
   is passed
 - add 'customer_context' to all response objects

1.0.6     2014-09-16 17:37:39+01:00 Europe/London
 - fix RT #98933, you can now book a shipment with 1 package
 - nicer fix for RT #98219

1.0.5     2014-09-08 16:09:04+01:00 Europe/London
 - the ::Response::PackageResult objects in a
   ::Response::ShipmentAccept now link back to the ::Package objects
   they relate to
 - ::Package now has separate linear_unit and weight_unit attributes;
   measurement_system is now a shortcut in the constructor
   parameters. Note that using kilograms/inches or pounds/centimetres
   will currently result in an error message from UPS
 - the 'id' attribute of ::Package is now a string; it's no longer
   used internally, so it's now a generic user-side identifier

1.0.4     2014-09-02 09:54:21+01:00 Europe/London
 - bump requirement of Types::Standard to get fix for RT #98362; it
   caused spurious parameter checking failures

1.0.3     2014-09-01 13:57:30+01:00 Europe/London
 - incorporate patch from RT #98219, in case AddressKeyFormat is
   returned multiple times
 - fix exception reporting for invalid street-level addresses

1.0.2     2014-08-07 13:22:45+01:00 Europe/London
 - implement ship_confirm and ship_accent (API in flux, useful
   features probably missing, but it's a start)

1.0.1     2014-07-29 11:22:31+01:00 Europe/London