@@ -1,5 +1,7 @@
 package Net::Async::Webservice::UPS::Response::Utils;
-use NAP::policy 'exporter';
+use strict;
+use warnings;
+use 5.010;
 use Sub::Exporter -setup => {
     exports => [qw(img_if pair_if base64_if
                    in_if out_if in_object_if in_object_array_if in_datetime_if
@@ -126,16 +128,16 @@ zone.
 
 =cut
 
-sub in_datetime_if {
-    my ($attr,$key) = @_;
-    state $date_parser = DateTime::Format::Strptime->new(
-        pattern => '%Y%m%d%H%M%S',
-    );
-    if ($implied_arg->{$key} && $implied_arg->{$key}{Date}) {
-        return ( $attr => $date_parser->parse_datetime($implied_arg->{$key}{Date}.$implied_arg->{$key}{Time}) );
-    }
-    return;
-}
+{my $date_parser = DateTime::Format::Strptime->new(
+    pattern => '%Y%m%d%H%M%S',
+);
+ sub in_datetime_if {
+     my ($attr,$key) = @_;
+     if ($implied_arg->{$key} && $implied_arg->{$key}{Date}) {
+         return ( $attr => $date_parser->parse_datetime($implied_arg->{$key}{Date}.$implied_arg->{$key}{Time}) );
+     }
+     return;
+}}
 
 =func C<pair_if>
 
